Implement edit-in-place

--- a/app/assets/templates/entries/entry.jst.hbs
+++ b/app/assets/templates/entries/entry.jst.hbs
@@ -1,4 +1,5 @@
-{{entry.name}}
+<label class="content">{{entry.name}}</label>
+<input class="edit" value="{{entry.name}}" />
 {{#if entry.winner}}
   <span class="winner">WINNER</span>
 {{/if}}
