--- a/app/assets/templates/entries/entry.jst.hbs
+++ b/app/assets/templates/entries/entry.jst.hbs
@@ -1,5 +1,3 @@
 <label class="content">{{entry.name}}</label>
 <input class="edit" value="{{entry.name}}" />
-{{#if entry.winner}}
-  <span class="winner">WINNER</span>
-{{/if}}
+<span class="winner destroy">✖</span>
