Fix completed items and css text-decorations

--- a/app/assets/templates/entries/entry.jst.hbs
+++ b/app/assets/templates/entries/entry.jst.hbs
@@ -1,6 +1,4 @@
-<label class="content">{{entry.name}}</label>
+<span class="check">✔</span>
+<span class="content">{{entry.name}}</span>
 <input class="edit" value="{{entry.name}}" />
 <span class="winner destroy">✖</span>
-{{#if entry.completed}}
-  <span>DONE!</span>
-{{/if}}
