--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -12,6 +12,37 @@ a {
   color: #0000FF;
 }
 
+h1 {
+  text-align: center;
+  margin: 24px 0;
+  color: #9494B8;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
+  border-top: solid 1px #CCC;
+}
+
+li {
+  border-bottom: solid 1px #CCC;
+  padding: 10px 10px;
+  font-size: 16px;
+  position: relative;
+  .winner {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: #999;
+    &.highlight {
+      color: #DD0000;
+      font-weight: bold;
+    }
+  }
+}
+
 .clear {
   clear: both;
   height: 0;
@@ -19,9 +50,9 @@ a {
 }
 
 #container {
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
-  background-color: #FFF;
+  background-color: #F4EFFA;
   padding: 20px 40px;
   border: solid 1px black;
   margin-top: 20px;
@@ -56,37 +87,6 @@ form input[type='submit'], #draw {
 
 #draw {
   margin: 20px auto;
-}
-
-h1 {
-  text-align: center;
-  font-size: 40px;
-  margin: 10px 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-top: 10px;
-  border-top: solid 1px #CCC;
-}
-
-li {
-  border-bottom: solid 1px #CCC;
-  padding: 10px 10px;
-  font-size: 16px;
-  position: relative;
-  .winner {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    color: #999;
-    &.highlight {
-      color: #DD0000;
-      font-weight: bold;
-    }
-  }
 }
 
 .destroy{
