--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,7 @@
-<!-- content_tag "div", "Loading ...", id: "container", 
-	data: {entries: Entry.all} -->
+<h1>SpaDay Activities</h1>
 
-Hello World!
+<%= javascript_tag do %>
+	$(function() {
+		SpaDay.start();
+	});
+<% end %>
