--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,102 +1,80 @@
 body {
 	background-color: #EEFFEE;
-  font-family: Verdana, Helvetica, Arial;
+  font-family: Helvetica, Verdana, Arial, sans-serif;
   font-size: 14px;
 }
-
-a img {
-  border: none;
-}
-
-a {
-  color: #0000FF;
-}
-
 h1 {
   text-align: center;
   margin: 24px 0;
   color: #9494B8;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-top: 10px;
-  border-top: solid 1px #CCC;
-}
-
-li {
-  border-bottom: solid 1px #CCC;
-  padding: 10px 10px;
-  font-size: 16px;
-  position: relative;
-  .winner {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    color: #999;
-    &.highlight {
-      color: #DD0000;
-      font-weight: bold;
-    }
-  }
-}
-
-.clear {
-  clear: both;
-  height: 0;
-  overflow: hidden;
-}
-
 #container {
-  width: 800px;
+  width: 900px;
   margin: 0 auto;
   background-color: #F4EFFA;
   padding: 20px 40px;
-  border: solid 1px black;
+  border: solid 3px #9494B8;
   margin-top: 20px;
 }
 
-form input {
-  font-size: 20px;
-}
-form input[type='text'] {
-  width: 480px;
-}
-form input[type='submit'], #draw {
-  -webkit-appearance: caret;
-	font-size: 14px;
-  font-size: 13px;
-  padding: 5px 10px 6px 10px;
-  font-weight: bold;
-  border: 1px solid #466A98;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  color: #FFF;
-  background: #24882B;
-  background: -webkit-gradient(linear, left top, left bottom, from(#32BE39), to(#247B28));
-  background: -moz-linear-gradient(top,  #32BE39,  #247B28);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#32BE39', endColorstr='#247B28');
-  text-decoration: none;
-  text-shadow: 0 -1px 0 #036;
-  text-align: middle;
-  vertical-align: top;
-}
-
-#draw {
-  margin: 20px auto;
+.activityContainer {
+  border: 1px solid #aaa;
+  width: 400px;
+  height: 220px;
+  background-color: #E8F8F8;
+  float: left;
+  margin: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  position: absolute;
+  img {
+    float: left;
+    margin: 10px;
+    max-width: 200px;
+    max-height: 200px;
+  }
+  ul {
+    list-style-type: none;
+    margin-bottom: 0;
+  }
+  button {
+    position: absolute; 
+    right: 20px;
+    bottom: 10px;
+    margin: 10px 0px;
+  }
 }
 
-.destroy{
-  color: red;
+#addActivity {
+  label {
+    margin-left: 30px;
+    margin-right: 10px;
+    text-align: right;
+    line-height: 25px;
+  }
+  button {
+    display: block;
+    margin: 14px 20px 5px 10px;
+    float: right;
+    clear: both;
+  }
 }
 
-.edit {
-  display: none;
+#addActivity label, #addActivity input {
+    display: block;
+    margin-bottom: 10px;
+    float: left;
 }
-
-span.complete.content{
-  text-decoration:line-through;
+#addActivity label[for="title"], #addActivity label[for="releaseDate"] {
+    clear: both;
+}
+#addActivity div:after {
+    content: "";
+    display: block;
+    height: 0;
+    visibility: hidden;
+    clear: both;
+    font-size: 0;
+    line-height: 0;
 }
