Fix CSS for including multiple activities

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,6 +20,7 @@
   </div>
 </div>
 
+<div class="activities">
 <div class="activityContainer">
     <%= image_tag "spaday.jpg", class: "default-img" %>
     <ul>
@@ -29,6 +30,27 @@
         <li>Location: Marina Lounge</li>
     </ul>
     <button class="delete">Remove</button>
+</div>
+<div class="activityContainer">
+    <%= image_tag "spaday.jpg", class: "default-img" %>
+    <ul>
+        <li>Title: Massage Session</li>
+        <li>Instructor: Helen Waite</li>
+        <li>Time: 3:00 PM</li>
+        <li>Location: Marina Lounge</li>
+    </ul>
+    <button class="delete">Remove</button>
+</div>
+<div class="activityContainer">
+    <%= image_tag "spaday.jpg", class: "default-img" %>
+    <ul>
+        <li>Title: Massage Session</li>
+        <li>Instructor: Helen Waite</li>
+        <li>Time: 3:00 PM</li>
+        <li>Location: Marina Lounge</li>
+    </ul>
+    <button class="delete">Remove</button>
+</div>
 </div>
 
 <%= javascript_tag do %>
