--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -11,7 +11,7 @@ h1 {
 
 #container {
   width: 900px;
-  margin: 0 auto;
+  margin: 30px auto;
   background-color: #F4EFFA;
   padding: 20px 40px;
   border: solid 3px #9494B8;
@@ -20,14 +20,13 @@ h1 {
 
 .activityContainer {
   border: 1px solid #aaa;
-  width: 400px;
+  width: 420px;
   height: 220px;
   background-color: #E8F8F8;
   float: left;
-  margin: 50px;
   padding: 10px;
   border-radius: 5px;
-  position: absolute;
+  margin: 20px 60px;
   img {
     float: left;
     margin: 10px;
@@ -39,11 +38,11 @@ h1 {
     margin-bottom: 0;
   }
   button {
-    position: absolute; 
-    right: 20px;
-    bottom: 10px;
     margin: 10px 0px;
   }
+}
+div.activities > div:nth-child(odd) {
+  margin-left: 120px;
 }
 
 #addActivity {
