Click causes an event which will render template

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -18,7 +18,7 @@ h1 {
   margin-top: 20px;
 }
 
-.activityContainer {
+.activityList {
   border: 1px solid #aaa;
   width: 420px;
   height: 220px;
