--- a/app/views/main/_template.html.erb
+++ b/app/views/main/_template.html.erb
@@ -1,5 +1,6 @@
 <script id="activityTemplate" type="text/template">
-    <img src="images/spaday.jpg"/>
+	<div class="activityList">
+    <%= image_tag "spaday.jpg", class: "default-img" %>
     <ul>
         <li>title</li>
         <li>instructor</li>
@@ -7,4 +8,5 @@
         <li>location</li>
     </ul>
     <button class="delete">Remove</button>
+  </div>
 </script>
