--- a/app/views/main/_template.html.erb
+++ b/app/views/main/_template.html.erb
@@ -1,5 +1,5 @@
 <script id="activityTemplate" type="text/template">
-	<div class="activityList">
+	<div class="activityContainer">
     <%= image_tag "spaday.jpg", class: "default-img" %>
     <ul>
         <li>title</li>
