--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,7 +20,8 @@
     </form>
   </div>
 
-  <div class="activityList">
+  <div id="activityList">
+    <div class="activityContainer">
       <%= image_tag "spaday.jpg", class: "default-img" %>
       <ul>
           <li>Title: Massage Session</li>
@@ -29,6 +30,7 @@
           <li>Location: Marina Lounge</li>
       </ul>
       <button class="delete">Remove</button>
+    </div>
   </div>
 
 </div>
