Model template works when created through initialize function

--- a/app/views/main/_template.html.erb
+++ b/app/views/main/_template.html.erb
@@ -1,12 +1,10 @@
 <script id="activityTemplate" type="text/template">
-	<div class="activityContainer">
-    <%= image_tag "spaday.jpg", class: "default-img" %>
-    <ul>
-        <li>title</li>
-        <li>instructor</li>
-        <li>time</li>
-        <li>location</li>
-    </ul>
-    <button class="delete">Remove</button>
-  </div>
+  <%= image_tag "spaday.jpg", class: "default-img" %>
+  <ul>
+    <li>Title: </li>
+    <li>Instructor: </li>
+    <li>Time: </li>
+    <li>Location:</li>
+  </ul>
+  <button class="delete">Remove</button>
 </script>
