Add and remove activity views now works, Turn more JS into CoffeeScript

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,17 +20,6 @@
     </form>
   </div>
 
-  <div id="activityList">
-    <div class="activityContainer">
-      <%= image_tag "spaday.jpg", class: "default-img" %>
-      <ul>
-          <li>Title: Massage Session</li>
-          <li class="instructor">Instructor: Helen Waite</li>
-          <li>Time: 3:00 PM</li>
-          <li>Location: Marina Lounge</li>
-      </ul>
-      <button class="delete">Remove</button>
-    </div>
-  </div>
+  <div id="activityList"></div>
 
 </div>
