Install handlebars templating

--- a/app/views/application/_template.html.erb
+++ b/app/views/application/_template.html.erb
@@ -1,10 +1,10 @@
 <script id="activityTemplate" type="text/template">
   <%= image_tag "spaday.jpg", class: "default-img" %>
   <ul>
-    <li>Title: </li>
-    <li>Instructor: </li>
-    <li>Time: </li>
-    <li>Location:</li>
+    <li>Title: {{title}}</li>
+    <li>Instructor: {{instructor}}</li>
+    <li>Time: {{time}}</li>
+    <li>Location: {{location}}</li>
   </ul>
   <button class="delete">Remove</button>
 </script>
